--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-	"name": "numberz-app",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
+  "name": "numberz-app",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "lint": "eslint src",
     "flow": "flow src",
     "android:build": "cd android && ./gradlew assembleRelease",
     "reset": "watchman watch-del-all && rm -rf node_modules/ && npm cache clean && npm prune",
     "test": "jest"
-	},
-	"dependencies": {
+  },
+  "dependencies": {
+    "art": "0.10.1",
     "babel-preset-react-native-stage-0": "1.0.1",
     "lodash": "4.17.4",
-		"react": "~15.4.0-rc.4",
-		"react-native": "0.40.0",
+    "react": "~15.4.0-rc.4",
+    "react-native": "0.40.0",
     "react-native-animatable": "1.1.0",
     "react-redux": "5.0.1",
     "redux": "3.6.0",
     "redux-logger": "2.7.4"
-	},
-	"devDependencies": {
+  },
+  "devDependencies": {
     "babel-eslint": "7.1.1",
-		"babel-jest": "18.0.0",
+    "babel-jest": "18.0.0",
     "babel-plugin-module-resolver": "2.4.0",
     "babel-plugin-transform-flow-strip-types": "6.21.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "18.1.0",
+    "babel-preset-react-native": "1.9.1",
     "eslint": "3.12.2",
     "eslint-config-mostaza-react": "1.14.0",
     "eslint-import-resolver-babel-module": "2.2.1",
@@ -35,9 +35,10 @@
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
     "flow-bin": "0.37.4",
-		"react-test-renderer": "~15.4.0-rc.4"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+    "jest": "18.1.0",
+    "react-test-renderer": "~15.4.0-rc.4"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
