--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "art": "0.10.1",
     "babel-preset-react-native-stage-0": "1.0.1",
     "lodash": "4.17.4",
+    "mobx": "3.0.2",
+    "mobx-react": "4.1.0",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-animatable": "1.1.0",
