--- a/package.json
+++ b/package.json
@@ -18,10 +18,7 @@
     "mobx-react": "4.1.0",
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
-    "react-native-animatable": "1.1.0",
-    "react-redux": "5.0.1",
-    "redux": "3.6.0",
-    "redux-logger": "2.7.4"
+    "react-native-animatable": "1.1.0"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
