--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "~15.4.0-rc.4",
     "react-native": "0.40.0",
     "react-native-animatable": "1.1.0",
-    "react-native-sound": "git+https://github.com/zmxv/react-native-sound.git#e0c4061cfdde275479e63e86c8d1373afa13d0dd"
+    "react-native-sound": "git+https://github.com/zmxv/react-native-sound.git#e0c4061cfdde275479e63e86c8d1373afa13d0dd",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
