Updated to react-native 0.41

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ local.properties
 #
 node_modules/
 npm-debug.log
+yarn-error.log
 
 # BUCK
 buck-out/
@@ -51,3 +52,9 @@ android/app/libs
 fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots
+
+# VSCode
+.vscode
+
+# JSconfig
+jsconfig.json
