--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "numberz-app",
+  "name": "tap-the-number",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -12,40 +12,33 @@
   },
   "rnpm": {
     "assets": [
-      "src/assets/fonts"
+      "src/assets/fonts",
+      "src/assets/audio"
     ]
   },
   "dependencies": {
-    "art": "0.10.1",
     "babel-preset-react-native-stage-0": "1.0.1",
     "lodash": "4.17.4",
-    "mobx": "3.0.2",
+    "mobx": "3.1.0",
     "mobx-react": "4.1.0",
     "react": "~15.4.0-rc.4",
-    "react-native": "0.40.0",
+    "react-native": "0.41.2",
     "react-native-animatable": "1.1.0",
-    "react-native-sound": "git+https://github.com/zmxv/react-native-sound.git#e0c4061cfdde275479e63e86c8d1373afa13d0dd",
-    "uuid": "^3.0.1"
+    "react-native-sound": "git+https://github.com/zmxv/react-native-sound.git",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
-    "babel-plugin-module-resolver": "2.4.0",
-    "babel-plugin-transform-flow-strip-types": "6.21.0",
+    "babel-plugin-module-resolver": "2.5.0",
+    "babel-plugin-transform-flow-strip-types": "6.22.0",
     "babel-preset-react-native": "1.9.1",
-    "eslint": "3.12.2",
-    "eslint-config-mostaza-react": "1.14.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^0.5.0",
-    "eslint-import-resolver-babel-module": "2.2.1",
-    "eslint-plugin-flowtype": "2.29.2",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-prettier": "^2.0.0",
-    "eslint-plugin-react": "6.8.0",
+    "eslint": "3.15.0",
+    "eslint-plugin-prettier": "2.0.0",
+    "eslint-plugin-react-app": "1.0.2",
     "flow-bin": "0.37.4",
     "jest": "18.1.0",
-    "prettier": "^0.16.0",
+    "prettier": "0.16.0",
     "react-test-renderer": "~15.4.0-rc.4"
   },
   "jest": {
